# yt2article

./: example.py  pyproject.toml
yt2article/: __init__.py  __main__.py
yt2article/downloaders/: __init__.py  downloader.py  youtube_downloader.py
yt2article/transcribers/: __init__.py  transcriber.py  whisper_transcriber.py
